--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node-dev --poll --respawn --transpile-only --no-deps --exit-child src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "3.2.1",
@@ -11,8 +11,13 @@
   },
   "devDependencies": {
     "@types/node": "14.17.21",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.0",
+    "prettier": "^2.4.1",
     "prisma": "3.2.1",
     "ts-node": "10.3.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "4.4.3"
   },
   "prisma": {
