--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rest-express",
-  "version": "1.0.0",
+  "name": "engivia-fastify",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --poll --respawn --transpile-only --no-deps --exit-child src/index.ts"
