--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "@prisma/client": "3.2.1",
-    "fastify": "3.22.0"
+    "@slack/web-api": "^6.4.0",
+    "fastify": "3.22.0",
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
     "@types/node": "14.17.21",
