--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@prisma/client": "3.2.1",
     "@slack/web-api": "^6.4.0",
     "fastify": "3.22.0",
+    "fastify-plugin": "^3.0.0",
     "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
