--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "ts-node-dev --transpile-only --exit-child src/index.ts"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.15.3",
     "@prisma/client": "^3.3.0",
     "@slack/web-api": "^6.4.0",
     "fastify": "3.22.0",
