--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@prisma/client": "^3.3.0",
     "@slack/web-api": "^6.4.0",
     "fastify": "3.22.0",
+    "fastify-autoload": "^3.9.0",
     "fastify-plugin": "^3.0.0",
-    "jwt-decode": "^3.1.2"
+    "jwt-decode": "^3.1.2",
+    "pino-pretty": "^7.1.0"
   },
   "devDependencies": {
     "@types/node": "14.17.21",
