--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fastify": "3.22.0",
     "fastify-autoload": "^3.9.0",
     "fastify-plugin": "^3.0.0",
+    "fluent-json-schema": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "pino-pretty": "^7.1.0"
   },
