--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,9 @@
 version: "3"
 
 services:
-  workspace:
-    # 起動するイメージを指定
-    image: node:14.18.0
-
-    container_name: engivia-workspace
-
-    # 環境変数を設定
-    environment:
-      - DEBUG=app:*
-
-    # コンテナを継続させる
-    tty: true
-
-    # ホスト側のポート:コンテナのポート
-    ports:
-      - '8000:8000'
-
-    #（ホスト側の./をコンテナの/appにマウント）
-    # ローカルにデータに残したくない場合は消す
-    volumes:
-      - .:/app
-
-    # 起動時のカレントフォルダを指定
-    working_dir: /app
-
-    depends_on:
-      - mysql
-
-    # 起動後に実行するコマンドを指定
-    command: npm run dev
-
   mysql:
+    # M1チップの場合コメント外す
+    # platform: 'linux/amd64'
     image: mysql:5.7
 
     container_name: engivia-mysql
