--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "fastify-autoload": "^3.9.0",
     "fastify-cors": "^6.0.2",
     "fastify-plugin": "^3.0.0",
+    "fastify-socket.io": "^2.0.1",
     "fluent-json-schema": "^3.0.1",
     "jwt-decode": "^3.1.2",
-    "pino-pretty": "^7.1.0"
+    "pino-pretty": "^7.1.0",
+    "socket.io": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "14.17.21",
