--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@google-cloud/storage": "^5.15.3",
     "@prisma/client": "^3.3.0",
+    "@sinclair/typebox": "^0.20.5",
     "@slack/web-api": "^6.4.0",
     "fastify": "3.22.0",
     "fastify-autoload": "^3.9.0",
