--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^5.15.3",
+    "@google-cloud/text-to-speech": "^3.3.1",
     "@prisma/client": "^3.3.0",
     "@sinclair/typebox": "^0.20.5",
     "@slack/web-api": "^6.4.0",
